--- a/argonauta/index.html
+++ b/argonauta/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    
+    <!-- styles -->
+    <link rel="stylesheet" href="./styles.css">
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
+
+    <!-- Alpine -->
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <title>Argonauta Web Player</title>
+
+    <title>Argonauta</title>
 </head>
 <body class="bg-gray-100">
   
@@ -85,6 +91,7 @@
                 :src="program.cover"
                 :alt="program.id"
                 x-on:click="playProgram(program)"
+                loading="lazy"
               />
               <div class="text-gray-500" x-text="program.coverSource"></div>
             </div>
